--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://eternityforest.github.io/StarPath/",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@astrodraw/astrochart": "^3.0.2",
@@ -17,6 +19,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "@vueuse/head": "^2.0.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
     "vite-ssg": "^25.0.0",
